--- a/index.html
+++ b/index.html
@@ -160,5 +160,6 @@
     </footer>
 
     <script src="js/index.js" type="module"></script>
+    <script src="js/lang.js" type="module"></script>
   </body>
 </html>
