--- a/index.html
+++ b/index.html
@@ -162,12 +162,12 @@
       <div id="footer-content">
         <small class="text-grey"
           ><span data-translate="footer.opensource">Website files are</span>
-          <a href="https://gitlab.com/Assayyaad/CV" target="_blank"
+          <a href="https://github.com/Assayyaad/CV" target="_blank"
             ><span data-translate="footer.opensource_link">Open Source</span></a
           >
           <span data-translate="footer.licensed">and licensed under</span>
           <a
-            href="https://gitlab.com/Assayyaad/CV/blob/main/LICENSE"
+            href="https://github.com/Assayyaad/CV/blob/main/LICENSE"
             target="_blank"
             ><span data-translate="footer.license">The Unlicense</span></a
           >
